syntax = "proto3";

package utils.gamepiece;

message GamePiece{
    Pose3d pose;
    GamePiece.Piece type;
}

message ProtobufPose3d{
    double x = 1;
    double y = 2;
    double z = 3;
    Rotation3d rotation = 4;
}

message ProtobufGamePiece{
    ProtobufPose3d pose = 1;
    Piece type = 2;
}

enum Piece {
    NONE = 0;
    CORAL = 1;
    ALGAE = 2;
}